--- a/src/sass/partials/_weather.scss
+++ b/src/sass/partials/_weather.scss
@@ -25,7 +25,10 @@
         position: absolute;
         right: 15px;
         top: 15px;
-        opacity: 0;        
+        opacity: 0;
+        &:focus{
+            opacity: 1;
+        }
     }
     &__row{
         display: flex;
